@@ -1,9 +1,11 @@
 package com.sep490.backendclubmanagement.service;
 
 import com.sep490.backendclubmanagement.dto.request.EventRequest;
+import com.sep490.backendclubmanagement.dto.response.ClubDto;
 import com.sep490.backendclubmanagement.dto.response.EventData;
 import com.sep490.backendclubmanagement.dto.response.EventResponse;
 import com.sep490.backendclubmanagement.dto.response.EventTypesDto;
+import com.sep490.backendclubmanagement.entity.Club;
 import com.sep490.backendclubmanagement.entity.Event;
 import com.sep490.backendclubmanagement.entity.EventType;
 import com.sep490.backendclubmanagement.exception.NotFoundException;
@@ -16,10 +18,8 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.context.MessageSource;
 import org.springframework.stereotype.Service;
 import org.springframework.data.domain.Page;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Locale;
-import java.util.Optional;
+
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -32,9 +32,36 @@ public class EventService {
     private final MessageSource messageSource;
 
     public EventResponse getAllEventsByFilter(EventRequest request) {
+        final List<String> keywords = (request.getKeyword() != null && !request.getKeyword().isBlank())
+                ? Arrays.stream(request.getKeyword().split(","))
+                .map(String::trim)
+                .filter(k -> !k.isEmpty())
+                .toList()
+                : List.of();
+
+        // 2️⃣ Lấy dữ liệu từ repository (lọc theo eventTypeId, clubId, thời gian, is_draft)
         Page<Event> page = this.eventRepository.getAllByFilter(request, request.getPageable());
         List<Event> events = page.getContent();
 
+        // 3️⃣ Nếu có keyword thì lọc tiếp ở tầng Java
+        if (!keywords.isEmpty()) {
+            events = events.stream()
+                    .filter(event -> {
+                        String title = event.getTitle() != null ? event.getTitle().toLowerCase() : "";
+                        String desc = event.getDescription() != null ? event.getDescription().toLowerCase() : "";
+                        String loc = event.getLocation() != null ? event.getLocation().toLowerCase() : "";
+
+                        // Ít nhất một keyword khớp
+                        return keywords.stream().anyMatch(kw ->
+                                title.contains(kw.toLowerCase()) ||
+                                        desc.contains(kw.toLowerCase()) ||
+                                        loc.contains(kw.toLowerCase())
+                        );
+                    })
+                    .toList();
+        }
+
+        // 4️⃣ Map sang DTO
         List<EventData> list = events.stream()
                 .map(event -> {
                     EventData dto = eventMapper.toDto(event);
@@ -42,11 +69,12 @@ public class EventService {
                     dto.setClubId(event.getClub() != null ? event.getClub().getId() : null);
                     return dto;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
+        // 5️⃣ Trả về kết quả
         return EventResponse.builder()
-                .total(page.getTotalElements())
-                .count(page.getNumberOfElements())
+                .total(page.getTotalElements())  // tổng số trong DB (chưa lọc keyword)
+                .count(list.size())              // số kết quả sau khi lọc keyword
                 .data(list)
                 .build();
     }
@@ -64,5 +92,10 @@ public class EventService {
         EventData dto = eventMapper.toDto(event.get());
         dto.setMediaUrls(eventMediaRepository.findMediaUrlsByEventId(event.get().getId()));
         return dto;
+    }
+
+    public List<ClubDto> getAllClubs() {
+        List<Club> clubs = eventRepository.findAllClubs();
+        return ModelMapperUtils.mapList(clubs, ClubDto.class);
     }
 }
